--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img height=180px class="profile" src="assets/images/profile.png" alt="" />
-                <h1 class="name">Jose Manuel Muñoz</h1>
-                <!--<h3 class="tagline">PhD Student</h3>-->
+                < class="name">Jose Manuel Muñoz</>
+                
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
