--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img height=180px class="profile" src="assets/images/profile.png" alt="" />
-                <h1 class="name">José M. Muñoz Sánchez</h1>
+                <h1 class="name">J.M. Muñoz</h1>
                 
             </div><!--//profile-container-->
             
