--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class=></i><a href="mailto: josemanuel.munoz@uca.es">josemanuel.munoz@uca.es</a></li>
+                    <li class="email"> </i><a href="mailto: josemanuel.munoz@uca.es">josemanuel.munoz@uca.es</a></li>
                     <!--<li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">0123 456 789</a></li> -->
                     <!--<li class="website"><i class="fa fa-globe"></i><a href="https://marithania.github.io" target="_blank">marithania.github.io</a></li>-->
                     <!--<li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>-->
