--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="education-container container-block">
                 <h2 class="container-block-title">Contact</h2>
                 <div class="item">
-                    <h4 class="degree">Dpto. de Psicología - Facultad de Ciencias de la Educación</h4>
-                    <h5 class="meta">Universidad de Cádiz - Campus de Puerto Real s/n</h5>
+                    <h4 class="degree">Psychology Department - Faculty of Educational Sciences</h4>
+                    <h5 class="meta">University of Cádiz - Puerto Real Campus</h5>
                     <h5 class="meta">11510 - Puerto Real</h5>
                     <div class="time">SPAIN</div>
                 </div><!--//item-->
