--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <div class="item">
                     <h4 class="degree">Psychology Department - Faculty of Educational Sciences</h4>
                     <h5 class="meta">University of Cádiz - Puerto Real Campus</h5>
+                    <h5 class="meta">Puerto Real Campus</h5>
                     <h5 class="meta">11510 - Puerto Real</h5>
                     <div class="time">SPAIN</div>
                 </div><!--//item-->
