--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"> </i><a href="mailto: josemanuel.munoz@uca.es">josemanuel.munoz@uca.es</a></li>
-                    <!--<li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">0123 456 789</a></li> -->
+                    <!--<li class="phone"><i class="fa fa-phone"></i><a href="tel:+34 956 016799">+34 956 016799</a></li>-->
                     <!--<li class="website"><i class="fa fa-globe"></i><a href="https://marithania.github.io" target="_blank">marithania.github.io</a></li>-->
                     <!--<li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>-->
                 </ul>
@@ -47,7 +47,7 @@
                 <h2 class="container-block-title">Contact</h2>
                 <div class="item">
                     <h4 class="degree">Psychology Department - Faculty of Educational Sciences</h4>
-                    <h5 class="meta">University of Cádiz</h5>
+                    <h5 class="meta">University of Cádiz (UCA)</h5>
                     <h5 class="meta">Puerto Real Campus</h5>
                     <h5 class="meta">11510 - Puerto Real</h5>
                     <div class="time">SPAIN</div>
