--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>About me</h2>
                 <div class="summary">
-                    <p style="text-align:justify">I am currently working as Associate Professor at the Department of Psychology of the University of Cádiz. I am member of the research group <a href="https://hum554.uca.es" target="_blank"> "Inteligencia, Comportamiento y Adaptación"</a>. 
+                    <p style="text-align:justify">I work from 2004 as Associate Professor at the Department of Psychology of the University of Cádiz (UCA). I am member of the research group <a href="https://hum554.uca.es" target="_blank"> "HUM554 Intelligence, Behavior & Adaptation"</a>. 
                     <p style="text-align:justify">I obtained my PhD Degree from the University of Seville in December 2000, supervised by Francisco Braza Lloret (Doñana Biological Station EBD-CSIC).</p> 
                     <p style="text-align:justify">I received a Degree in Psychology (December 1992), from the National Distance Education University (UNED).</p>
                     <p style="text-align:justify">I have been a visiting predoctoral researcher at the Social Ethology Department of the Doñana Biological Station (November 1993 – October 1994) under the supervision of Francisco Braza Lloret.</p> 
-                    <p style="text-align:justify">I have been a visitint postdoctoral researcher at the Oinarrizko Psikologia Prozesuak eta Garapena Saila at the Uiversity of the Basque Country (August 2002) under the supervision of José Ramón Sánchez Martín.</p>
-                    <p style="text-align:justify">In November 2004 I enrolled the Department of Psychology at the University of Cádiz as a Associate Professor. 
+                    <!--<p style="text-align:justify">I have been a visiting postdoctoral researcher at the Oinarrizko Psikologia Prozesuak eta Garapena Saila at the Uiversity of the Basque Country (August 2002) under the supervision of José Ramón Sánchez Martín.</p>-->
+                    <!--<p style="text-align:justify">In November 2004 I enrolled the Department of Psychology at the University of Cádiz as a Associate Professor.</p>-->
                 </div><!--//summary-->
             </section><!--//section-->
             
@@ -146,8 +146,7 @@
                     <p>With J. H. Przytycki. </p></span>
                 </div><!--//item-->
                 <div class="item">
-                    [6] <span class="project-title"><a href="
-https://doi.org/10.1017/S0308210517000300" target="_blank">"A geometric description of the extreme Khovanov homology". </a></span> <span class="project-tagline"> <br/> Proceedings of The Royal Society of Edinburgh: Section A, 148 (2018), 3, 541-557. 
+                    [6] <span class="project-title"><a href="https://doi.org/10.1017/S0308210517000300" target="_blank">"A geometric description of the extreme Khovanov homology". </a></span> <span class="project-tagline"> <br/> Proceedings of The Royal Society of Edinburgh: Section A, 148 (2018), 3, 541-557. 
                     <p>With J. González-Meneses and P. M. G. Manchón. </p></span>   
                  </div><!--//item-->
                 <div class="item">
