--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                     <p></p>
                 </div><!--//intro-->
                 <div class="item">
-                    [12] <span class="project-title"><a href="https://arxiv.org/pdf/1909.10962.pdf"target="_blank">"The root extraction problem for generic braids". </a></span> 
-                    <span class="project-tagline"> <br/> Symmetry. To appear. 
-                    <p>With M. Cumplido and J. González-Meneses. </p></span>
+                    [21] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Aggressive behavior in school-aged children: clusters based on anger, empathy and testosterone and cortisol measures". </a></span> 
+                    <span class="project-tagline"> <br/> The Spanish journal of psychology. Volume 22 2019, E42. 
+                    <p>With E. Pascual-Sagastizabal, J. R. Sánchez-Martín), O. Vegas, P. Braza, M. R. Carreras, N. del Puerto-Golzarri and A. Azurmendi. </p></span>
                 </div><!--//item--> 
                 <div class="item">
                     [11] <span class="project-title"><a href="https://arxiv.org/pdf/1807.03727.pdf"target="_blank">"Geometric realization of the almost-extreme Khovanov homology of semiadequate links". </a></span> 
