--- a/index.html
+++ b/index.html
@@ -169,46 +169,55 @@
                 </div><!--//item-->
                     <div class="item">
                     [11] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Social cognitive predictors of peer acceptance at age 5 and the moderating effects of gender".
-                        </a></span> <span class="project-tagline"> <br/> British Journal of Developmental Psychology (2010), Volume 27(3), 703-716.
-                    <p>With F. Braza, A. Azurmendi, M. R. Carreras, P. Braza, A. García, A. Sorozábal and J. R. Sánchez-Martín.</p></span>
+                         </a></span> <span class="project-tagline"> <br/> British Journal of Developmental Psychology (2010), Volume 27(3), 703-716.
+                         <p>With F. Braza, A. Azurmendi, M. R. Carreras, P. Braza, A. García, A. Sorozábal and J. R. Sánchez-Martín.</p></span>
                 </div><!--//item-->
                 <div class="item">
                     [10] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Androgen levels, parenting styles and aggressive behavior in 5-6-year-old boys and girls".
-                    </a></span> <span class="project-tagline"> <br/> Psicothema (2009), Volume 21(1), 57-62.
-                    <p>With J. R. Sánchez-Martín, A. Azurmendi, E. Fano, F. Braza, and M. R. Carreras. </p></span>   </div><!--//item--><br/> <br/>
-                 <div class="item">
+                         </a></span> <span class="project-tagline"> <br/> Psicothema (2009), Volume 21(1), 57-62.
+                         <p>With J. R. Sánchez-Martín, A. Azurmendi, E. Fano, F. Braza, and M. R. Carreras. </p></span>   </div><!--//item--><br/> <br/>
+                  </div><!--//item-->
+                  <div class="item">
                     [09] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Behavioral profiles of different types os social status in preschool children: an observational approach".
                      </a></span> <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal (2007), Volume 35(2), 195-212.
                     <p>With F. Braza, P. Braza, M. R. Carreras, J. R. Sánchez-Martín, A. Azurmendi, A. Sorozábal, A. García and J. Cardas. </p></span>   </div><!--//item--><br/> <br/>
-                 <div class="item">
+                </div><!--//item-->
+                  <div class="item">
                     [08] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Aggression, dominance, and affiliation: Their relationships with androgen levels and intelligence in 5-year-old children".
                      </a></span> <span class="project-tagline"> <br/> Hormones and Behavior (2006), Volume 50(1), 132-140.
                 <p>With A. Azurmendi, F. Braza, A. García, P. Braza and J. R. Sánchez-Martín. </p></span>   </div><!--//item--><br/> <br/>
-                 <div class="item">
+                 </div><!--//item-->
+                  <div class="item">
                     [07] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Cognitive abilities, androgen levels, and body mass index in 5-year-old children".
                      </a></span> <span class="project-tagline"> <br/> Hormones and Behavior (2005), Volume 48(2), 187-195.
                 <p>With A. Azurmendi, F. Braza, A. Sorozábal, A. García, P. Braza, M. R. Carreras, J. Cardas and J. R. Sánchez-Martín. </p></span>   </div><!--//item--><br/> <br/>
-                 <div class="item">
+                 </div><!--//item-->
+                  <div class="item">
                     [06] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"An approach to the study of attitudes and strategies of social thought and their connection with disruptive behavior in the secondary school classroom".
                      </a></span> <span class="project-tagline"> <br/> Anales de Psicología (2004), Volume 20(1), 81-91.
                 <p>With M. R. Carreras and P. Braza. </p></span>   </div><!--//item--><br/> <br/>
-                 <div class="item">
+                 </div><!--//item-->
+                  <div class="item">
                     [05] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Effects of siblings on preschool children's behavioral flexibility".
                      </a></span> <span class="project-tagline"> <br/> Revista Mexicana de Psicología (2000), Volume 17, 181-190.
                 <p>With F. Braza, M. R. Carreras, C. San José and P. Braza. </p></span>   </div><!--//item--><br/> <br/>
-                 <div class="item">
+                 </div><!--//item-->
+                  <div class="item">
                     [04] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Development of sex differences in preschool children: Social behavior during an academic year".
                      </a></span> <span class="project-tagline"> <br/> Psychological Reports (1997), Volume 80(1), 179-188.
                 <p>With F. Braza, P. Braza, and M. R. Carreras. </p></span>   </div><!--//item--><br/> <br/>
-                 <div class="item">
+                 </div><!--//item-->
+                  <div class="item">
                     [03] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"The index of amplitude of behavior as a measuring instrument of social ability in preschool children".
                      </a></span> <span class="project-tagline"> <br/> Psicothema (1997), Volume 9(2), 305-310.
                 <p>With F. Braza, P. Braza and M. R. Carreras. </p></span>   </div><!--//item--><br/> <br/>
-                 <div class="item">
+                 </div><!--//item-->
+                  <div class="item">
                     [02] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Factors affecting the social ability in pre-school children: An exploratory study".
                      </a></span> <span class="project-tagline"> <br/> Behavioural Processes (1994), Volume 32, 209-226.
                 <p>With F. Braza, P. Braza and M. R. Carreras. </p></span>   </div><!--//item--><br/> <br/>
-                 <div class="item">
+                 </div><!--//item-->
+                  <div class="item">
                     [01] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Measuring the social ability of preschool children".
                      </a></span> <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal (1993), Volume 21(2), 145-157.
                 <p>With P. Braza, F. Braza and M. R. Carreras. </p></span>
