--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="item">
                     [10] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Androgen levels, parenting styles and aggressive behavior in 5-6-year-old boys and girls".
                          </a></span> <span class="project-tagline"> <br/> Psicothema (2009), Volume 21(1), 57-62.
-                         <p>With J. R. Sánchez-Martín, A. Azurmendi, E. Fano, F. Braza, and M. R. Carreras. </p></span>   </div><!--//item--><br/> <br/>
+                         <p>With J. R. Sánchez-Martín, A. Azurmendi, E. Fano, F. Braza, and M. R. Carreras. </p></span>
                   </div><!--//item-->
                   <div class="item">
                     [09] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Behavioral profiles of different types os social status in preschool children: an observational approach".
