--- a/index.html
+++ b/index.html
@@ -185,37 +185,37 @@
                   <div class="item">
                     [08] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Aggression, dominance, and affiliation: Their relationships with androgen levels and intelligence in 5-year-old children".
                      </a></span> <span class="project-tagline"> <br/> Hormones and Behavior (2006), Volume 50(1), 132-140.
-                <p>With A. Azurmendi, F. Braza, A. García, P. Braza and J. R. Sánchez-Martín. </p></span>   </div><!--//item--><br/> <br/>
+                <p>With A. Azurmendi, F. Braza, A. García, P. Braza and J. R. Sánchez-Martín. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [07] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Cognitive abilities, androgen levels, and body mass index in 5-year-old children".
                      </a></span> <span class="project-tagline"> <br/> Hormones and Behavior (2005), Volume 48(2), 187-195.
-                <p>With A. Azurmendi, F. Braza, A. Sorozábal, A. García, P. Braza, M. R. Carreras, J. Cardas and J. R. Sánchez-Martín. </p></span>   </div><!--//item--><br/> <br/>
+                <p>With A. Azurmendi, F. Braza, A. Sorozábal, A. García, P. Braza, M. R. Carreras, J. Cardas and J. R. Sánchez-Martín. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [06] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"An approach to the study of attitudes and strategies of social thought and their connection with disruptive behavior in the secondary school classroom".
                      </a></span> <span class="project-tagline"> <br/> Anales de Psicología (2004), Volume 20(1), 81-91.
-                <p>With M. R. Carreras and P. Braza. </p></span>   </div><!--//item--><br/> <br/>
+                <p>With M. R. Carreras and P. Braza. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [05] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Effects of siblings on preschool children's behavioral flexibility".
                      </a></span> <span class="project-tagline"> <br/> Revista Mexicana de Psicología (2000), Volume 17, 181-190.
-                <p>With F. Braza, M. R. Carreras, C. San José and P. Braza. </p></span>   </div><!--//item--><br/> <br/>
+                <p>With F. Braza, M. R. Carreras, C. San José and P. Braza. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [04] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Development of sex differences in preschool children: Social behavior during an academic year".
                      </a></span> <span class="project-tagline"> <br/> Psychological Reports (1997), Volume 80(1), 179-188.
-                <p>With F. Braza, P. Braza, and M. R. Carreras. </p></span>   </div><!--//item--><br/> <br/>
+                <p>With F. Braza, P. Braza, and M. R. Carreras. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [03] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"The index of amplitude of behavior as a measuring instrument of social ability in preschool children".
                      </a></span> <span class="project-tagline"> <br/> Psicothema (1997), Volume 9(2), 305-310.
-                <p>With F. Braza, P. Braza and M. R. Carreras. </p></span>   </div><!--//item--><br/> <br/>
+                <p>With F. Braza, P. Braza and M. R. Carreras. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [02] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Factors affecting the social ability in pre-school children: An exploratory study".
                      </a></span> <span class="project-tagline"> <br/> Behavioural Processes (1994), Volume 32, 209-226.
-                <p>With F. Braza, P. Braza and M. R. Carreras. </p></span>   </div><!--//item--><br/> <br/>
+                <p>With F. Braza, P. Braza and M. R. Carreras. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [01] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Measuring the social ability of preschool children".
